# llm-efficiency-challenge

./: .gitignore  .gitmodules  README.md  config.py  eval.sh  pyproject.toml  requirements.txt  train.py
configs/: dolly.yaml  lima.yaml
notebooks/: create_dataset.py  dataset.ipynb  finn-test.ipynb  test.ipynb
train_harness/: __init__.py  config.py  core.py  data.py  train.py
