[tool.poetry]
name = "train_harness"
version = "0.1.0"
description = "My attempt and experiments for 2023 NeurIPS LLM Efficiency Challenge"
authors = ["sidnb13 <sidnbaskaran@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu118", source = "torchcu118"}
vllm = "^0.2.0"
peft = {git = "https://github.com/huggingface/peft"}
fastapi = "^0.103.2"
datasets = "^2.14.5"
wandb = "^0.15.12"
absl-py = "^2.0.0"
ml-collections = "^0.1.1"
trl = {git = "https://github.com/huggingface/trl"}

[[tool.poetry.source]]
name = "torchcu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
